Cherry-pick 284831@main (99535733074e). https://bugs.webkit.org/show_bug.cgi?id=280747

[Debug] SHOULD NEVER BE REACHED on `fast/multicol/spanner-get-re-added-on-move-crash.html`
    https://bugs.webkit.org/show_bug.cgi?id=280747

    Reviewed by Darin Adler.

    It happens when the table has captions but no sections,
    i.e. `sectionMoved` is `true` and `sectionCount` is `0`.

    * LayoutTests/TestExpectations:
    * Source/WebCore/rendering/RenderTable.cpp:
    (WebCore::RenderTable::layout):

    Canonical link: https://commits.webkit.org/284831@main

Canonical link: https://commits.webkit.org/282416.200@webkitglib/2.46